# ngtonic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: pdmlint.yml  release.yml
scripts/: format.sh  lint.sh
src/ngtonic/: __main__.py  importer.py  movements.py
